--- a/ass2/earthquakeMining.ipynb
+++ b/ass2/earthquakeMining.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dFrame = pd.read_csv('aftershockDataset.csv')"
+    "dFrame = pd.read_csv('aftershockDataset.csv')#its in the same directory"
    ]
   },
   {
